--- a/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
@@ -450,6 +450,7 @@
     <Content Include="Views\EditorTemplates\SiteSettings\FacebookShopSiteSettings.cshtml" />
     <Content Include="Views\DefinitionTemplates\FacebookShopProductPartSettings.cshtml" />
     <Content Include="Views\EditorTemplates\Parts\FacebookShopProductPartEditor.cshtml" />
+    <Content Include="Views\GA4CheckoutStep.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\DefinitionTemplates\GTMProductSettingVM.cshtml" />
