Corrections on remove_from_cart event and begin_checkout event. Implemented purchase event.

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
@@ -247,6 +247,7 @@
     <Compile Include="ViewModels\FacebookShopProductPartViewModel.cs" />
     <Compile Include="ViewModels\FacebookShopSiteSettingsViewModel.cs" />
     <Compile Include="ViewModels\GA4ProductVM.cs" />
+    <Compile Include="ViewModels\GA4PurchaseVM.cs" />
     <Compile Include="ViewModels\IGAProductVM.cs" />
     <Compile Include="ViewModels\OrderAddressEditorViewModel.cs" />
     <Compile Include="ViewModels\GTMProductSettingVM.cs" />
@@ -451,6 +452,7 @@
     <Content Include="Views\DefinitionTemplates\FacebookShopProductPartSettings.cshtml" />
     <Content Include="Views\EditorTemplates\Parts\FacebookShopProductPartEditor.cshtml" />
     <Content Include="Views\GA4CheckoutStep.cshtml" />
+    <Content Include="Views\GA4Purchase.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\DefinitionTemplates\GTMProductSettingVM.cshtml" />
