Correction of typo in CheckoutViewModel.GetShoppingTotal (had 3 ps). Implementation of GA4 events "add_payment_info" and "add_shipping_info".

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
@@ -248,6 +248,7 @@
     <Compile Include="ViewModels\FacebookShopSiteSettingsViewModel.cs" />
     <Compile Include="ViewModels\GA4ProductVM.cs" />
     <Compile Include="ViewModels\GA4PurchaseVM.cs" />
+    <Compile Include="ViewModels\GA4ShippingInfoVM.cs" />
     <Compile Include="ViewModels\IGAProductVM.cs" />
     <Compile Include="ViewModels\OrderAddressEditorViewModel.cs" />
     <Compile Include="ViewModels\GTMProductSettingVM.cs" />
@@ -453,6 +454,7 @@
     <Content Include="Views\EditorTemplates\Parts\FacebookShopProductPartEditor.cshtml" />
     <Content Include="Views\GA4CheckoutStep.cshtml" />
     <Content Include="Views\GA4Purchase.cshtml" />
+    <Content Include="Views\GA4ShippingInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\DefinitionTemplates\GTMProductSettingVM.cshtml" />
