--- a/src/Modules/Laser.Orchard.AdvancedSettings/Laser.Orchard.AdvancedSettings.csproj
+++ b/src/Modules/Laser.Orchard.AdvancedSettings/Laser.Orchard.AdvancedSettings.csproj
@@ -52,6 +52,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\Orchard\src\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -102,6 +105,7 @@
     <Compile Include="Services\IThemeSkinsService.cs" />
     <Compile Include="Services\ThemeSkinsService.cs" />
     <Compile Include="ViewModels\AdvancedSettingsEdit.cs" />
+    <Compile Include="ViewModels\SkinsManifest.cs" />
     <Compile Include="ViewModels\ThemeSkinsPartEditViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
