--- a/src/Modules/Laser.Orchard.AdvancedSettings/Laser.Orchard.AdvancedSettings.csproj
+++ b/src/Modules/Laser.Orchard.AdvancedSettings/Laser.Orchard.AdvancedSettings.csproj
@@ -93,7 +93,10 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Drivers\AdvancedSettingsPartDriver.cs" />
     <Compile Include="Drivers\ThemeSkinsPartDriver.cs" />
+    <Compile Include="Drivers\ThemeSkinsSettingsPartDriver.cs" />
     <Compile Include="Handlers\AdvancedSettingsPartHandler.cs" />
+    <Compile Include="Handlers\ThemeSkinsSettingsPartHandler.cs" />
+    <Compile Include="Models\ThemeSkinsSettingsPart.cs" />
     <Compile Include="ThemeSkinsMigrations.cs" />
     <Compile Include="Migrations.cs" />
     <Compile Include="Models\AdvancedSettingsPartRecord.cs" />
@@ -150,6 +153,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\EditorTemplates\Parts\ThemeSkinsPart.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Settings\ThemeSkinsSettings.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
