Corrections on shape management, text on partials, button management, removed useless properties from CustomPosSettings model.

--- a/src/Modules/Laser.Orchard.PaymentGateway/Laser.Orchard.PaymentGateway.csproj
+++ b/src/Modules/Laser.Orchard.PaymentGateway/Laser.Orchard.PaymentGateway.csproj
@@ -244,6 +244,9 @@
   <ItemGroup>
     <Content Include="Views\DefaultCustomPos.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\CashOnDelivery.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
