Added provider management for order status. Corrections on shapes and service / providers implementations.

--- a/src/Modules/Laser.Orchard.PaymentGateway/Laser.Orchard.PaymentGateway.csproj
+++ b/src/Modules/Laser.Orchard.PaymentGateway/Laser.Orchard.PaymentGateway.csproj
@@ -247,6 +247,9 @@
   <ItemGroup>
     <Content Include="Views\CashOnDelivery.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\PosPayButton_CashOnDelivery.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
