Feature ShortCodes: Content shortcode, first basic implementation

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -537,6 +537,13 @@
     <Compile Include="Settings\JsonDataTablePartSettingsHooks.cs" />
     <Compile Include="Settings\IdentityPartOnEveryTypeDefinitionHooks.cs" />
     <Compile Include="ShapeTableProviders\TenantShapeBindingStrategy.cs" />
+    <Compile Include="ShortCodes\Abstractions\IShortCodeProvider.cs" />
+    <Compile Include="ShortCodes\DescribeContext.cs" />
+    <Compile Include="ShortCodes\Descriptor.cs" />
+    <Compile Include="ShortCodes\EvaluateContext.cs" />
+    <Compile Include="ShortCodes\Filters\ShortCodesFilter.cs" />
+    <Compile Include="ShortCodes\Providers\ContentShortCodeProvider.cs" />
+    <Compile Include="ShortCodes\Providers\EmptyShortCodeProvider.cs" />
     <Compile Include="TaxonomiesExtensions\Drivers\TaxonomyExtensionPartDriver.cs" />
     <Compile Include="Controllers\UsersGroupsSettingsController.cs" />
     <Compile Include="Drivers\UsersGroupsDriver.cs" />
@@ -764,6 +771,7 @@
   <ItemGroup>
     <Folder Include="ContentPickerContentCreation\Models\" />
     <Folder Include="ContentPickerContentCreation\Style\" />
+    <Folder Include="ShortCodes\Contextes\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
