Refactoring some logic into services

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -538,14 +538,17 @@
     <Compile Include="Settings\JsonDataTablePartSettingsHooks.cs" />
     <Compile Include="Settings\IdentityPartOnEveryTypeDefinitionHooks.cs" />
     <Compile Include="ShapeTableProviders\TenantShapeBindingStrategy.cs" />
+    <Compile Include="ShortCodes\Abstractions\DescribeContext.cs" />
     <Compile Include="ShortCodes\Abstractions\IShortCodeProvider.cs" />
+    <Compile Include="ShortCodes\Alternates\ContentShortCodeAlternates.cs" />
     <Compile Include="ShortCodes\Controllers\ContentShortCodeAdminController.cs" />
-    <Compile Include="ShortCodes\DescribeContext.cs" />
-    <Compile Include="ShortCodes\Descriptor.cs" />
+    <Compile Include="ShortCodes\Abstractions\Descriptor.cs" />
     <Compile Include="ShortCodes\Drivers\ShortCodeForBodyPartDriver.cs" />
-    <Compile Include="ShortCodes\EvaluateContext.cs" />
+    <Compile Include="ShortCodes\Abstractions\EvaluateContext.cs" />
     <Compile Include="ShortCodes\Filters\ShortCodesFilter.cs" />
     <Compile Include="ShortCodes\Providers\ContentShortCodeProvider.cs" />
+    <Compile Include="ShortCodes\Abstractions\IShortCodesServices.cs" />
+    <Compile Include="ShortCodes\Services\ShortCodesServices.cs" />
     <Compile Include="ShortCodes\Settings\ContentShortCodeSettingsHooks.cs" />
     <Compile Include="ShortCodes\Settings\Models\ContentShortCodeSettings.cs" />
     <Compile Include="ShortCodes\ViewModels\ShortCodesEditor.cs" />
